--- a/style.css
+++ b/style.css
@@ -20,4 +20,161 @@ html {
   img {
     max-width: 100%;
     height: auto;
+    margin: 0;
+  }
+
+  figure {
+    margin: 0;
+  }
+
+  .welcome {
+    
+  }
+  
+
+  .navigation {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .first__navigation {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px grey solid;
+    padding: 5px 0;
+  }
+
+  .navigation__container {
+    width: 90%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .contact {
+    display: flex;
+    font-size: 12px;
+    font-family: sans-serif;
+    opacity: .6;
+    width: 50%;
+    justify-content: space-between;
+  }
+
+  .secondary__navigation {
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+    
+  }
+
+  .secondary__navigation-container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+  }
+  .company__logo {
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+  }
+
+  .secondary__navigation-list {
+    justify-content: space-between;
+    display: flex;
+    width: 60%;
+  }
+
+  .nav__link-items {
+    display: flex;
+    width: 70%;
+    justify-content: space-between;
+  }
+  .secondary__navigation-items{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .nav__link-item {
+    text-decoration: none;
+    opacity: .6;
+    color: inherit
+  }
+
+  .small__selector {
+    position: relative;
+    display: block;
+    /* margin-top: 1.5em; */
+  }
+  
+  label {
+   /* margin: 0 10px; */
+  }
+
+  .search__panel {
+    width: 100%
+
+  }
+
+  .search__bar {
+    display: flex;
+    justify-content: center;
+  }
+  .form__selection {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #7e151a;
+    color: white;
+    padding: 25px;
+  }
+
+  .firstline__group {
+    display: flex;
+    flex-direction: column;
+    max-width: 25%;
+    align-items: center;
+  }
+  .find {
+    height: 50%;
+    justify-content: space-between;
+  }
+  .group__form {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 10px;
+  }
+  .group__form-find {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+  }
+  .group__form-flor {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    max-width: 100%;
+  }
+  .group__form-florex {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 100%;
+    padding: 10px;
+  }
+
+  .column {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .big__selector {
+    margin: 10px 0;
+  }
+  .flor__selection {
+    margin: 10px 0;
+    width: 48%;
   }
