--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
   }
   
   img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     margin: 0;
   }
@@ -108,7 +108,7 @@ html {
   }
   
   label {
-   /* margin: 0 10px; */
+   font-weight: 700;
   }
 
   .search__panel {
@@ -119,6 +119,7 @@ html {
   .search__bar {
     display: flex;
     justify-content: center;
+    padding-top: 40px;
   }
   .form__selection {
     display: flex;
@@ -135,10 +136,13 @@ html {
     flex-direction: column;
     max-width: 25%;
     align-items: center;
+   
   }
   .find {
-    height: 50%;
+    height: 75%;
+    padding-top: 25px;
     justify-content: space-between;
+    
   }
   .group__form {
     display: flex;
@@ -173,8 +177,48 @@ html {
 
   .big__selector {
     margin: 10px 0;
+    padding: 10px;
   }
   .flor__selection {
     margin: 10px 0;
     width: 48%;
+    padding: 10px;
   }
+
+  .find__button {
+    width: 100%;
+    height: 30px;
+  }
+
+
+.main__product-paragraf {
+  
+  }
+  
+.main__product-paragraph-text {
+ 
+}
+.product {
+    
+}
+.product__container {
+
+}
+
+.product__item {
+
+}
+.product__picture {
+    
+    
+}
+.product__view-figure {
+   
+}
+.product__view-image.img {
+  
+}
+.product__view-figcaption {
+ 
+    
+}
