--- a/style.css
+++ b/style.css
@@ -214,7 +214,6 @@ html {
 }
 
 .product__item {
-  padding: 0 0 25px;
   width: 24%;
 }
 .product__picture {
@@ -222,12 +221,19 @@ html {
     
 }
 .product__view-figure {
-   
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
 }
 .product__view-image.img {
   
 }
 .product__view-figcaption {
- 
-    
+ position: relative;
+ top: -26px;
+ color: white;
+ background-color: rgb(0, 0, 0, 0.3);
+font-weight: 700;
+height: 25px;
+padding-left: 10px;
 }
